--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* special-elite-regular - latin */
 @font-face {
     font-display: swap;
-    font-family: 'Special Elite';
+    font-family: 'Microsoft Yi Baiti';
     font-style: normal;
     font-weight: 400;
     src: url('fonts/special-elite-v18-latin-regular.woff2') format('woff2'),
