--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* special-elite-regular - latin */
 @font-face {
-    font-display: swap;
+    font-display: auto;
     font-family: 'Microsoft Yi Baiti';
     font-style: normal;
     font-weight: 400;
