--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,8 @@ body {
 }
 
 header h3 {
-    font-size: 50px;
-    margin-top: 70%;
+    font-size: 40px;
+    margin-top: 160px%;
     color: #ffffff; /* Weiß */
 
 .tile-container .overlay-text h2 {
