--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ main {
     max-width: 600px;
     z-index: 10; /* Über den Kacheln anzeigen */
     padding: 20px;
-    pointer-events: none; /* Ermöglicht das Klicken durch das Overlay hindurch */
+    pointer-events: none; /* Overlay blockiert keine Interaktionen */
 }
 
 #contact .centered {
