--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ main {
 }
 
 /* Senden-Button */
-#contact form button {
+#contact-form-overlay #contact form button {
     margin-top: 15px;
     padding: 10px 20px;
     border: none;
@@ -167,9 +167,11 @@ main {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    pointer-events: auto; /* Sichert die Interaktivität */
+    z-index: 11; /* Überlagert andere Elemente */
 }
 
-#contact form button:hover {
+#contact-form-overlay #contact form button:hover {
     background-color: #005f9f; /* Helleres Blau beim Hover */
 }
 
