--- a/styles.css
+++ b/styles.css
@@ -42,19 +42,6 @@ body {
     z-index: 5; /* Header-Text bleibt über anderen Elementen */
 }
 
-.tile-container .overlay-text {
-    justify-content: start;
-}
-
-.tile-container .overlay-text h3 {
-    margin-top: 80px; /* Anpassbarer Wert für die Positionierung */
-    color: #ffffff; /* Weißer Text für bessere Sichtbarkeit */
-}
-
-.tile-container .overlay-text h2 {
-    margin-top: 180px;
-}
-
 header h1 {
     font-size: 50px;
     margin: 0;
@@ -119,7 +106,7 @@ main {
 /* Container für die Pakete */
 .package-container {
     position: absolute;
-    top: 50%; /* Zentrieren auf der Seite */
+    top: 70%; /* Pakete im unteren Bereich der Seite */
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
@@ -129,31 +116,6 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-/* Hintergrund-Bild-Container */
-.tile-container {
-    position: relative;
-    z-index: 1; /* Hinter den Paketen */
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: auto auto;
-    padding: 20px;
-    background-color: #474747; /* Hintergrundfarbe wie im Header */
-}
-
-.tile {
-    height: 200px; /* Standard-Höhe der Kacheln */
-    background-size: cover;
-    background-position: center;
-}
-
-.tile.large {
-    grid-column: span 2; /* Großes Bild links, spannt über 2 Spalten */
-}
-
-.tile.rectangular {
-    grid-row: span 2; /* Rechteckiges Bild, spannt über 2 Zeilen */
 }
 
 /* Paket-Kacheln */
@@ -205,10 +167,44 @@ main {
     }
 
     .package-container {
-        top: 60%; /* Anpassung der Position für kleinere Bildschirme */
+        top: 75%; /* Anpassung der Position für kleinere Bildschirme */
     }
 }
 
+
+/* Allgemeine Body-Stile */
+body {
+    font-family: 'Special Elite', sans-serif;
+    color: #fff;
+    margin: 0;
+    background-color: #474747; /* Hintergrundfarbe wie im Header */
+}
+
+/* Header-Stile */
+.header {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    background: url('assets/pictures/Header.jpeg') no-repeat center center/cover;
+    z-index: 5; /* Header bleibt über anderen Elementen */
+}
+
+.overlay-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    z-index: 5; /* Header-Text bleibt über anderen Elementen */
+}
 /* Kontaktformular-Overlay */
 #contact-form-overlay {
     position: absolute;
