--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,14 @@ body {
     z-index: 5; /* Header-Text bleibt über anderen Elementen */
 }
 
+.tile-container h2 {
+    top: 70;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+}
+
 header h1 {
     font-size: 50px;
     margin: 0;
