--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,11 @@ body {
     
 }
 
+.tile-container p {
+    width: 100%;
+    height: 45%;
+    
+}
 .tile-container h3 {
     width: 100%;
     height: 50%;
